fix: Reduce white space beneath carousel
- Set the aspect ratio of the carousel to 1.2/1 for the <768px breakpoint.
- It is now the same aspect ratio as the 768px-1279px breakpoint.

--- a/src/content/dam/wbx/us/images/workspace/styles/_modals.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_modals.scss
@@ -180,7 +180,7 @@ $list-items-border-color: #c4c4c4;
         width: 100%;
 
         .swiper {
-          aspect-ratio: 1 / 1.2;
+          aspect-ratio: 1.2 / 1;
           .swiper-wrapper {
             .swiper-slide {
               text-align: center;
@@ -376,13 +376,6 @@ $list-items-border-color: #c4c4c4;
         .ws-device-name {
           margin-top: 80px;
         }
-
-        .ws-image-carousel {
-          .swiper {
-            aspect-ratio: 1.2 / 1;
-          }
-        }
-
 
         .ws-device-features.ws-modal-section {
           ul {
